--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess Piplup's Number</title>
-    <link rel="stylesheet" href="../src/styles/style.css">
+    <link rel="stylesheet" href="./src/styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 
@@ -16,7 +16,7 @@
 
             <main class="content_box_1">
                 <div class="image_container">
-                    <img class="title_image" src="./assets/images/game_title.png" alt="">
+                    <img class="title_image" src="./src/assets/images/game_title.png" alt="">
                 </div>
                 <div class="display_container">
                     <p class="display">?</p>
@@ -51,7 +51,7 @@
     </div>
 
 
-    <script src="index.js"></script>
+    <script src="./src/index.js"></script>
 
 </body>
 
